--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
-	<app-demo></app-demo>
+	<web-memo></web-memo>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="app.js"></script>
+    <script src="services/memo.service.js"></script>
+    <script src="components/memo-list.js"></script>
 </body>
 </html>
